bynkc/tests/fixtures/positive/253_integration_multi_file_commons_uses/src/money/fee.bynk
commons money {
  fn withFee(amount: Int) -> Int {
    amount + 5
  }
}
