bynkc/tests/fixtures/negative/322_match_guard_not_bool/input.bynk
commons test {
  fn f(n: Int) -> Int {
    match n {
      x if x => 1
      _      => 0
    }
  }
}
